fix bugs, add shardhelper, human type, human mouse, trash, webcamera spoof, trash, bookmarks and etc.
